KSENROLL-13078: Alignment fix for Calendar search Button to be inline with input fields.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@70206 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/calendar.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/calendar.less
@@ -100,11 +100,20 @@ td.col2, td.col4, th.col1, th.col3 { padding-bottom:0; padding-left:0; padding-r
   border:0;
 }
 
+.ks-Calendar-search .uif-boxLayoutHorizontalItem {
+    display: inline-block;
+    float: none;
+    .btn{
+        margin-top: 7px;
+    }
+}
+
 #KS-CalendarSearch-CriteriaSection .table-condensed .uif-gridLayoutCell {
   margin-top:15px;
 }
+
 #KS-CalendarSearch-CriteriaSection .table-condensed .uif-gridLayoutCell > .uif-horizontalFieldGroup {
-  margin-left:-15px !important;
+  margin-left:-15px;
 }
 #KS-CalendarSearch-CriteriaSection .table-condensed .uif-gridLayoutCell  .uif-boxLayoutHorizontalItem.uif-horizontalBoxGroup {
   margin-top: 25px;
